@@ -1,3 +1,7 @@
+2016-10-11  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
+
+	* gui/mainWindow.py: Moved buttons to __createButtons method.
+
 2016-10-07  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
 	* gui/mainWindow.py (MainApp.__createInputs): Add exception for
